--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+/************************************************************************************
+Small screens
+*****************************************************************************************/
+
 
 *{
     box-sizing: border-box;
@@ -37,6 +41,10 @@ li,a{
     color:black;
     text-decoration: none;
 }
+a:hover{
+    color: rgba(200, 70, 48, 1);
+    border-bottom: 3px solid rgba(163, 177, 184, 1);
+}
 h2{
     padding: 0.5rem;
      font-family: 'Satisfy', cursive;
@@ -57,6 +65,7 @@ p{
 nav ul {
     display:flex;
     flex-flow: column;
+    flex: 1 1 450px;
     min-width: fit-content;
     border:2px solid black;
     border-radius: 20px;
@@ -100,6 +109,9 @@ footer{
 #smedia{
     display: flex;
     width: 25px;
+}
+iframe{
+    border: 2px solid black;
 }
 /****************************************************************
 Medium screens
