--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ nav{
     border:1px solid black;
     border-radius: 5px;
     max-width: fit-content;
+    margin: 0 auto;
 }
 nav ul {
     display:none;
@@ -189,6 +190,9 @@ Medium screens
 @media only screen and (min-width: 37.5em){
     h1 {
         font-size: 1.5rem;
+    }
+    nav{
+        margin: 0 auto;
     }
     nav ul {
         display:flex;
